app/assets/stylesheets/editor.scss
@import "base";

/* Editors in Grid */

.slick-cell {
  // text
  .editor-text {
    background: $grid-editor-text-bg;
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0 none;
  }
  input[type="text"]:focus:not([readonly]) {
    padding-left: 8px;
    font-size: $font-size-small;
    &.editor-text {
      border: none !important;
      box-shadow: none !important;
    }
  }
  input[type="text"]:not(.browser-default) {
    height: 24px;
  }
  .autocomplete-content {
    margin-top: -12px;
    margin-left: -2px;
    width: 102%;
  }
  // select
  .chzn-container {
    &.chzn-container-multi {
      .chzn-drop {
        margin-top: 10px;
      }
    }
    .chzn-single {
      box-shadow: none;
      margin-right: 4px;
      margin-bottom: 8px;
    }
    .chzn-drop {
      margin-right: 4px;
      margin-left: -2px;
    }
    .chzn-choices {
      margin-bottom: -5px;
      box-shadow: none;
    }
  }
}

// textarea

.textarea-wrapper {
  z-index: 10000;
  position: absolute;
  background: $grid-editor-textarea-editor-bg-color;
  padding: $grid-editor-textarea-editor-padding;
  box-shadow: $box-shadow;
}

.textarea-in-grid {
  height: $grid-editor-textarea-height;
  border: 0;
  outline: 0;
}

